Closed Bug 578215 Opened 13 years ago Closed 13 years ago

Browser crashes when opening http://html5test.com/ [@ CallQueryInterface<nsISupports, nsXPCOMCycleCollectionParticipant>(nsISupports*, nsXPCOMCycleCollectionParticipant**) ]

Categories

(Core :: Graphics: Canvas2D, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla2.0b2

People

(Reporter: bomfog, Assigned: Ms2ger)

References

()

Details

(Keywords: crash, regression)

Crash Data

Attachments

(2 files)

User-Agent:       Mozilla/5.0 (Windows; Windows NT 6.0; en-US; rv:2.0b2pre) Gecko/20100712 Minefield/4.0b2pre Firefox/3.6
Build Identifier: Mozilla/5.0 (Windows; Windows NT 6.0; en-US; rv:2.0b2pre) Gecko/20100712 Minefield/4.0b2pre Firefox/3.6

Page flashes for a fraction of a second, then browser crashes

Reproducible: Always

Steps to Reproduce:
1.Download a zip build, 20100712090037 03782d915403 or later 
2.Unzip and start the browser
3.Open the page http://html5test.com/
Actual Results:  
Browser crashes

Expected Results:  
Page opens, no crash

Last good build: 20100712073718 58eb7d767d6f

Crashes with fresh profile, safe-mode

Some crash reports (Hourlies, so may not help much):
bp-3960e94c-f33f-4547-bdff-cc0022100712
bp-f9b2d2b9-7e16-4997-9495-2096b2100712
bp-093a46e3-cbf4-474a-9f64-3a65f2100712
...

[@ xul.dll@0x45fcf2]
[@ xul.dll@0x4698f9]
EXCEPTION_ACCESS_VIOLATION
WFM with Mozilla/5.0 (Windows; Windows NT 6.1; WOW64; en-US; rv:2.0b2pre) Gecko/20100712 Minefield/4.0b2pre
Keywords: crash
Version: unspecified → Trunk
Same problem here:
http://crash-stats.mozilla.com/report/index/bp-0faa6a6e-d42a-4547-8bb7-832872100712

Mozilla/5.0 (Windows; Windows NT 6.1; WOW64; en-US; rv:2.0b2pre) Gecko/20100711 Minefield/4.0b2pre ID:20100712164810
Component: General → HTML: Parser
Product: Firefox → Core
QA Contact: general → parser
Possible regression window, from another user at mozillazine forums:

broken -- 20100712090245 42e56a8bb77a

Last good build -- 20100712073718 58eb7d767d6f

I have not verified this range.
Summary: Browser crashes when opening http://html5test.com/ → Browser crashes when opening http://html5test.com/ [@ CallQueryInterface<nsISupports, nsXPCOMCycleCollectionParticipant>(nsISupports*, nsXPCOMCycleCollectionParticipant**) ]
The patch in bug 401788 made GetContextHelper return NS_OK without returning a helper. In nsHTMLCanvasElement::GetContext we then call CallQueryInterface on the helper (CallQI doesn't handle null).
Blocks: 401788
Component: HTML: Parser → Canvas: 2D
QA Contact: parser → canvas.2d
Depends on: 578349
Attached patch PatchSplinter Review
Assignee: nobody → Ms2ger
Status: NEW → ASSIGNED
Attachment #457063 - Flags: review?(jonas)
Flags: in-testsuite?
OS: Windows Vista → All
Priority: -- → P1
Hardware: x86 → All
Target Milestone: --- → mozilla1.9.3b2
Notice that bug 578465 contains a different patch for the same bug. We need whoever wrote this code (Vlad?) to decide on The Right Fix (tm).
The patch here is probably the right thing to do
Target Milestone: mozilla2.0b2 → mozilla1.9.3b2
Target Milestone: mozilla1.9.3b2 → flash10
Attached file testcase
I'm getting this crash with this testcase.
Mozilla/5.0 (Windows; Windows NT 6.1; WOW64; en-US; rv:2.0b2pre) Gecko/20100715 Minefield/4.0b2pre

I'm getting a different crash to the other comments here.

From beta.html5test.com http://crash-stats.mozilla.com/report/index/0fb26d17-2871-400b-97a6-4a2af2100715

and from comment #14 testcase http://crash-stats.mozilla.com/report/index/32ac4521-acf8-471d-9946-a9d852100715
Hey! The patch here is checkin-needed, why doesn't someone check it in? Shall I do it?
Auxiliary question: why doesn't  Ms2ger have commit rights? Wouldn't it make everyone's life easier?
Sorry, thought this had already been checked in

http://hg.mozilla.org/mozilla-central/rev/ce439bd24549
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Keywords: checkin-needed
Target Milestone: flash10 → mozilla2.0b2
Crash Signature: [@ CallQueryInterface<nsISupports, nsXPCOMCycleCollectionParticipant>(nsISupports*, nsXPCOMCycleCollectionParticipant**) ]
You need to log in before you can comment on or make changes to this bug.