b=578215; crash with canvas getContext; r=jonas